--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -151,7 +151,7 @@ ul{
 }
 
 .website{
-    background-color:hsl(322.35deg 42.15% 76.27%) ;
+    background-color:hsl(322, 62%, 55%) ;
 }
 
 .mobile{
