--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,7 +1,4 @@
-/*
-color palette
-hsl(210deg 28.57% 97.25%)
-*/
+
 /*Reset*/
 *{
 margin: 0;
@@ -16,7 +13,7 @@ font-family: "Inter", sans-serif;
 }
 
 .background-gray{
-    background-color: rgb(246 248 250);
+    background-color: #e5e9ec80;
     height: 100%;
 }
 
@@ -39,7 +36,8 @@ header img{
 h1{
     display: inline-block;
     vertical-align: middle;
-    font-size: 2.5rem
+    font-size: 2.5rem;
+    font-weight: 900;
 }
 
 /*MAIN*/
@@ -52,7 +50,7 @@ main{
 .wrapper{
     width: 80%;
     margin: 0 auto;
-    background-color: white;
+    background-color: #ffffff;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -62,7 +60,7 @@ main{
 .button-container{
     padding-left: 2rem;
     padding: 15px 0;
-    border-bottom: 2px solid rgb(246 248 250);
+    border-bottom: 4px solid #e5e9ec80;
     width: 100%;
     padding-left: 2rem;
 }
@@ -70,7 +68,7 @@ main{
 .button{
     padding: 8px 12px;
     border-radius:5px;
-    border-color: rgb(246 248 250);
+    border-color: #f6f8fa;
     font-size: 0.75rem;
     border-color: hsl(0deg 0% 84.71%);
     border-style: solid;
@@ -78,11 +76,11 @@ main{
 
 .blue-button{
     background-color: hsl(204.5deg 84.92% 60.98%);
-    color: white;
+    color: #ffffff;
 }
 
 .white-button{
-    background-color: white;
+    background-color: #ffffff;
     color: hsl(0deg 0% 84.71%);
 }
 
@@ -91,7 +89,7 @@ main{
 
 .main-container-lists{
     line-height: 2rem;
-    color:hsl(0deg 0% 29.02%);
+    color:#4a4a4a;
     padding-left: 2rem;
 }
 
@@ -119,12 +117,12 @@ ul{
 }
 
 .done{
-    color: green;
+    color: #008000;
     border: solid 1px green;
 }
 
 .undone{
-    color: red;
+    color: #ff0000;
     border: solid 1px red;
 }
 
@@ -132,32 +130,31 @@ ul{
 
 .label{
     font-size: 12px;
-    background-color: black;
-    color: white;
+    color: #ffffff;
     padding: 8px 14px;
     border-radius: 15px;
 }
 
 .editorial{
-    background-color: hsl(201.22deg 76.64% 58.04%);
+    background-color: #42ace6;
 }
 
 .q1-goals{
-    background-color: hsl(261.36deg 72.84% 68.24%);
+    background-color: #9d73e9;
 }
 
 .recruiting{
-    background-color: hsl(164.82deg 38.97% 58.24%);
+    background-color: #6bbea9;
 }
 
 .website{
-    background-color:hsl(322, 62%, 55%) ;
+    background-color:#d3459f ;
 }
 
 .mobile{
-    background-color: rgb(241 162 46);
+    background-color: #f1a22e;
 }
 
 .sales{
-    background-color:rgb(179 203 54) ;
+    background-color:#b3cb36 ;
 }
