--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -139,26 +139,26 @@ ul{
     border-radius: 15px;
 }
 
-.editorial{
+.bg-blue{
     background-color: #42ace6;
 }
 
-.q1-goals{
+.bg-violet{
     background-color: #9d73e9;
 }
 
-.recruiting{
+.bg-green{
     background-color: #6bbea9;
 }
 
-.website{
+.bg-pink{
     background-color:#d3459f ;
 }
 
-.mobile{
+.bg-orange{
     background-color: #f1a22e;
 }
 
-.sales{
+.bg-olive-green{
     background-color:#b3cb36 ;
 }
